--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-    run_tests:
-      docker:
-        - image: circleci/python:3.9.5
-      steps:
-        - checkout
-        - run:
-            name: Install Dependencies
-            command: |
-              echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
-              pip install --user -r requirements.txt
-        - run:
-            name: Run Unit Tests
-            command: |
-              pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
-        - store_test_results:
-            path: test-reports
-        - store_artifacts:
-            path: test-reports
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
