--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pylint == 2.4.3
 pytest == 5.2.2
 pytest-html == 2.0.0
-flask == 1.0.0
-Jinja2 >= 2.1.0
-werkzeug>=2.0.0
+flask == 2.0.3
+Jinja2 == 2.1.1
+werkzeug ==2.0.0
